--- a/MazeOfLife/MazeOfLife/MazeOfLife.csproj
+++ b/MazeOfLife/MazeOfLife/MazeOfLife.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{ED1E77B5-8DBF-40BE-823E-3FCFDDC800B1}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleApplication1</RootNamespace>
-    <AssemblyName>ConsoleApplication1</AssemblyName>
+    <RootNamespace>MazeOfLife</RootNamespace>
+    <AssemblyName>MazeOfLife</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
